@@ -20,6 +20,8 @@
    *    (ms) Emmanuel Rodriguez suggested changing TestBuffer's reset() 
              method to leave the logger population alone. Added clear()
              to accomodate the need for a single buffer reset.
+   *    (ms) Xavier Caron added %p{1} to allow abbreviated priority
+             strings in the pattern layout.
 
 1.26 (2009/11/22)
     *   (ms) [RT 50495] Perl code in the config file is now evaluated/
